--- a/index.html
+++ b/index.html
@@ -10,34 +10,40 @@
       <div id="front" class="album">
         <div id="title-box">
 
-          <!-- Level 4 'PHARRELL WILLIAMS' Header -->
+          <h4 style="font-size:10px;height:25px;font-weight:lighter;">PHARRELL WILLIAMS</h4>
 
-          <!-- Level 2 'HAPPY' Header -->
-
-          <!-- Level 4 '| FROM DESPICABLE ME...' Header -->
+          <h2 style="font-size:60px;font-weight:bold;height:75px;">HAPPY</h2>
+          
+          <h4 style="font-size:10px;height:25px">| FROM DESPICABLE ME 2 |</h4>
 
         </div>
       </div>
 
       <div id="back" class="album">
 
-        <!-- Level 3 '| FROM DESPICABLE ME...' Header -->
+        <h3 style="font-size:20px;height:45px;font-weight:lighter;">| FROM DESPICABLE ME 2 |</h3>
 
-        <!-- Level 1 'HAPPY' Header -->
-
-        <!-- Level 3 'WRITTEN BY...' Header -->
-
-        <!-- pararaph text 'PUBLISHED BY...' -->
-
-        <!-- span text 'PHARRELLWILLIAMS.COM' -->
-
-        <!-- display the images hosted on [https://s3.amazonaws.com/learn-verified/columbia-logo.png] -->
-
-        <!-- span text 'COLUMBIARECORDS.COM' -->
-
+        <h1 style="font-size:150px;font-weight:bold;height:75px;">HAPPY</h1>
+        <br>
+        <br>
+        <br>
+        <br>
         <br>
 
-        <!-- display the images hosted on [https://s3.amazonaws.com/learn-verified/sony-logo.png] -->
+        <h3 style="font-size:15px;height:25px;font-weight:lighter;font-stretch:extra-expanded;">WRITTEN BY PHARRELL WILLIAMS</h3>
+        <br>
+
+        <p style="font-size:10.5px;height:25px">PUBLISHED BY EMI APRIL MUSIC, INC. OBO ITSELF AND MORE WATERFROM NAZARETH (ASCAP) / UNIVERSAL PICTURES MUSIC (ASCAP) | BACKGROUND VOCALS PERFORMED BY RHEA DUMMETT, TREVON HENDERSON, ASHLEY L. LEE, SHAMIKA HIGHTOWER, JASMINE MURRAY AND TERRENCE ROLLE | PRODUCED BY PHARRELL WILLIAMS | RECORDED BY MIKE LARSON FOR I AM OTHER ENTERTAINMENT AT CIRCLE HOUSE STUDIOS, MIAMI, FL | ASSISTED BY MATTHEW DESRAMEAUX | DIGITAL EDITING AND ARRANGEMENT BY ANDREW COLEMAN AND MIKE LARSON FOR I AM OTHER ENTERTAINMENT | MIXED BY LESLIE BRATHWAITE AT MUSIC BOX STUDIOS, ATLANTA, GA.</p>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+
+        <p><span style="font-size:15px;height:25px">PHARRELLWILLIAMS.COM</span><img src="https://s3.amazonaws.com/learn-verified/columbia-logo.png" alt="Columbia Records"><span style="font-size:15px;height:25px">COLUMBIARECORDS.COM</span></p>
+
+
+        <img src="https://s3.amazonaws.com/learn-verified/sony-logo.png" alt="Sony Music" -->
 
       </div>
     </div>
